<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marlonortiz.villavicencio.TourismActivity"
    android:background="@color/lightgreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

        <!-- Sitio Turístico 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/t1"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/parklib"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/t1des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- Sitio Turístico 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/t2"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/cristorey"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/t2des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- Sitio Turístico 3 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/t3"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/malocas"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/t3des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- Sitio Turístico 4 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/t4"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/agrot4"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/t4des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- Sitio Turístico 5 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/t5"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ocarros"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/t5des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
