<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marlonortiz.villavicencio.HotelActivity"
    android:background="@color/lightgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

        <!-- HOTEL 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/h1"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/h1"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/h1des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- HOTEL 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/h2"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/h2"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/h2des"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>

        <!-- HOTEL 3 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/h3"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/h3"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/h3des"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
