<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.marlonortiz.villavicencio.BarActivity"
    android:background="@color/lightgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

        <!-- BAR 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/b1"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/b1"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/b1des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- BAR 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/b2"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/b2"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/b2des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

        <!-- BAR 3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/b3"
                android:textStyle="bold"
                android:gravity="center|center"
                android:textColor="@color/black"
                >
            </TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/b3"
                >
            </ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/b3des"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
