<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.marlonortiz.villavicencio.InfoActivity"
    android:background="@color/lightgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/infotitle"
            android:textStyle="bold"
            android:gravity="center|center"
            android:textColor="@color/black"
            >
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/info"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/infodes"
            android:textColor="@color/black"
            android:gravity="center|center"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/infodes2"
            android:textColor="@color/black"
            android:gravity="left"
            />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
